added i18n to controller messages

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -140,8 +140,16 @@ new-deal.othercommission=Other commission
 new-deal.comment=Comment
 new-deal.button.adddeal=Add deal
 
-fragment.navbar.profile=Profile
-fragment.navbar.portfolios=Portfolios
-fragment.navbar.login=Login
-fragment.navbar.register=Register
-fragment.navbar.logout=Logout
+controller.registration.register.confirmation.empty=Password confirmation can't be empty!
+controller.registration.register.confirmation.different=Passwords are different!
+controller.registration.register.email.exists=User already exists!
+
+controller.user.update.password.empty=Both Password and Confirmation should be filled!
+controller.user.update.password.mismatch=Password and Confirmation must match!
+
+controller.portfolio.create.name.empty=Name can't be empty!
+controller.portfolio.update.name.empty=Name can't be empty!
+controller.portfolio.update.cash.negative=Cash balance can't become negative!
+
+controller.deal.add.security.not-found=Can't find security with specified name. Please, choose from suggested list!
+controller.deal.add.cash.insufficient=Can't create this deal. Please check if you have sufficient money in portfolio
